--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ section {
 .home p {
     font-size: 1.3rem;
     max-width: 650px;
-    margin-top: 40px;
+    margin: 30px 0px 0px 0px;
 }
 
 .section-title {
@@ -215,6 +215,7 @@ section {
 .fade-up.active {
     transform: translateY(0);
 }
+
 
 
 
